dark mode fixes

--- a/src/assets/css/components/compare-usages.css
+++ b/src/assets/css/components/compare-usages.css
@@ -4,7 +4,7 @@
     background-color: white;
 }
 
-.data {
+.data-section {
     display: flex;
     box-shadow: 0px 5px 20px rgb(0 0 0 / 5%);
     border-radius: 10px;
