--- a/src/assets/css/components/temp-table.css
+++ b/src/assets/css/components/temp-table.css
@@ -3,19 +3,11 @@
     padding: 2em;
     margin-top: 3em;
     background-color: white;
-    box-shadow: 0px 5px 20px rgb(0 0 0 / 5%);
+    box-shadow: 0 5px 20px rgba(0 0 0, 0.5);
     border-radius: 10px;
     margin-bottom: 10em;
 }
 
-.table thead {
-    background-color: #00509E;
-    color: white;
-}
-
-.table tr:nth-child(even) {
-    background-color: rgba(0, 80, 158, 0.2);
-}
 
 .tab-link {
     display: block;
@@ -34,7 +26,17 @@
 .tab-active {
     color: white !important;
     background: #00509E;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+}
+
+.dataTables_wrapper .dataTables_filter,
+.dataTables_wrapper .dataTables_length{
+    color: var(--text-color);
+}
+
+.dataTables_wrapper .dataTables_length select {
+    color: var(--text-color);
+    background-color: var(--main-bg);
 }
 
 .dataTables_wrapper .dataTables_filter input {
@@ -44,40 +46,48 @@
     margin: 10px;
 }
 
+.table thead {
+    background-color: #00509E;
+    color: white;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: var(--table-row-bg-even);
+    color: var(--text-color);
+}
+
+.table tbody tr:nth-child(odd) {
+    background-color: var(--table-row-bg-odd);
+    color: var(--text-color);
+}
+
+.table tbody tr:hover {
+    background-color: #555555;
+    color: white;
+    cursor: pointer;
+}
+.table>:not(:last-child)>:last-child>*{
+    border: none;
+}
+
 .table > :not(caption) > * > * {
     border: none;
 }
 
-.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_info,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
 .dataTables_wrapper .dataTables_paginate .paginate_button {
-    transition:500ms ease-in;
+    color: var(--text-color)!important;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
-.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
-    color:white !important;
-}
-
 .dataTables_wrapper .dataTables_paginate .paginate_button.current,
-.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-    background: none !important;
-    border-radius: 8px;
-    background-color: #00509E !important;
-    color:white !important;
-}
-
-.paginate_button.current:hover {
-    background: none !important;
-    border-radius: 8px;
-    background-color: #00509E!important;
-    color:white !important;
-}
-
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
-.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+.paginate_button:hover {
     border: 1px solid #979797;
-    background: none !important;
     border-radius: 8px !important;
-    background-color: #00509E !important;
-    color: white !important;
+    background: #00509E none !important;
+    color: white!important;
+    cursor: pointer;
+    transition: 500ms ease-in;
 }
